# sim-one-alpha

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  Cargo.toml  PROJECT-TRACKING.md  README.md  agents.md  development-graph.json  development-graph.md  flue.config.ts  get_diff.js  my_diff.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  starting-prompt.md  tsconfig.json
.github/workflows/: ci.yml  smoke-memory.yml
.gorombo/db/: README.md
crates/gorombo-memory/: Cargo.toml
crates/gorombo-memory/src/: checklist.rs  id.rs  index.rs  input.rs  lib.rs  note.rs  query.rs  record.rs  scope.rs  serialize.rs  todo.rs  validate.rs
docs/: CUBIC_PROMPTS.md  README.md  starting-prompt.md
docs/agents/: domain.md  issue-tracker.md
docs/architecture/: astro-docs-mcp.md  capability-system.md  flue-architecture.md  (+13 more)
openwiki/: .last-update.json  quickstart.md  source-map.md
scripts/: approvals-cli.mjs  build-prod.mjs  build-ratatui-tui.mjs  capability-admin.mjs  chat.mjs  check-sim-one-product-command.mjs  clean-tsc-output.mjs  copy-runtime-config.mjs  copy-wasm-artifact.mjs  enforce-pnpm.mjs  fetch-embedding-model.mjs  generate-builtin-registry.mjs  patch-ink.mjs  product-artifact-lock.mjs  product-artifact-lock.test.mjs  protocol-admin.mjs  research.mjs  run-unit-tests.mjs  skill-md-loader.mjs  smoke-http-endpoints.mjs  smoke-memory-helper.mjs  test-built-http.mjs  test-ratatui-interactive.py  test-ratatui-product.mjs  test-ratatui-visible-final.py  test-tui-e2e.mjs  wasm-build.mjs
sim-one-cli/: package.json  tsup.config.ts
src/: AGENTS.md  app.ts  db.ts  index.ts  workspace-loader.ts
tui-proto/: package.json  tsconfig.json
tui/ratatui/: Cargo.toml  README.md
tui/ratatui/src/: agent.rs  app.rs  diagnostics.rs  gateway.rs  history.rs  http.rs  input.rs  lib.rs  main.rs  markdown.rs  terminal.rs  text_wrap.rs  theme.rs  transcript.rs  ui.rs
tui/ratatui/src/flue/: events.rs  mod.rs  reducer.rs  stream.rs
tui/ratatui/tests/: agent_client.rs  app_state.rs  event_reducer.rs  gateway_launcher.rs  history_client.rs  input_mapping.rs  stream_parser.rs  terminal_interaction.rs  ui_render.rs
(+704 files in other folders)
