[package]
name = "gorombo-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
ulid = { version = "1.1.3", default-features = false, features = ["std"] }
thiserror = "2.0.9"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
chrono = { version = "0.4.39", features = ["wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
