[package]
name = "gorombo-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust engine for the GOROMBO Agent structured-memory subsystem (checklists, todos, session notes). Compiled to WebAssembly via wasm-pack."
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]

