[package]
name = "sim-one-ratatui-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui terminal interface experiment for SIM-ONE Alpha."

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
ratatui-textarea = "0.9"
