[package]
name = "sim-one-ratatui-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui terminal interface experiment for SIM-ONE Alpha."

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache"] }
crossterm = { version = "0.29", features = ["osc52"] }
ratatui-textarea = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-markdown = { version = "0.3.8", default-features = false }
unicode-width = "0.2"
unicode-segmentation = "1.12"
